--- a/css/history.css
+++ b/css/history.css
@@ -79,6 +79,8 @@
 }
 
 .cityRemoveButtonWrapper {
+    height: 100px;
+
     display: flex;
     justify-content: space-between;
     align-items: end;
